<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/r80"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/horizontal_layout"
                android:layout_marginRight="@dimen/horizontal_layout"
                android:background="#4D000000"
                android:drawableLeft="@drawable/ic_airplanemode_active_black_24dp"
                android:padding="8dp"
                android:text="Pesawat R80"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:drawablePadding="4dp"/>

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginTop="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="B.J. Habibie"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="Presiden ke 3 Indonesia"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="@string/content_text"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginTop="@dimen/vertical_layout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nama"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="14sp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TTL"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TTL"
                    android:textSize="14sp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jabatan"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jabatan"
                    android:textSize="14sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Penemuan"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penemuan"
                    android:textSize="14sp"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:text="@string/donasi"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/r80"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/vertical_layout"
                android:layout_marginRight="@dimen/horizontal_layout"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/r80"
                android:layout_toRightOf="@+id/r80"
                android:text="@string/ajakan"/>

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:text="Donasi"/>
    </LinearLayout>
</ScrollView>